-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.249 2008-04-11 19:40:11 guru Exp $
-----------------------------------------------------------------------------------------
2008-04-11	pwessel
	* x2sys/x2sys_binlist.c:	Could create bad bins because of incorrect reallocation of memory.

2008-04-09	remko
	* gmt_init.c:		Added new gmtdefaults value UNIX_TIME_FORMAT, which sets the format for
				the time string in the GMT time stamp (-U option). The default is
				"%Y %b %d %H:%M:%S", which is what was printed up to now, except that
				%e (which is not supported by ISO C90) is replaced by %d.
	* gmt_defaults.txt:	---"---
	* gmt{,_globals.h}:	---"---
	* gmtdefaults_*.orig:	---"---
	* gmt_plot.c:		Use gmtdefs.unix_time_format to format the time stamp. This also requires
				the time stamp box to size with the time string and the additional label
				to move. Tweaked the placement of the strings a bit (better vertical
				placement and relative horizontal placement using spaces).

2008-04-07	remko
	* gmt_grdio.c:		Did not yet properly combine ?varname=suffix on output grid.
	* ps2raster.c:		Security improvements: (1) Replaced tmpnam by mktemp, as tmpnam provides
				a limited number of temp file names. (2) Run commands using system(cmd)
				directly and remove file using remove(file), instead of creating a
				script first.

2008-04-05	pwessel
	* gmt_map.c:		Fixed final bug in GMT_radial_clip.  Also, GMT_world_map should be
				FALSE for azimuthal projections.  This fixes the -JA -JE pscoast bugs.

2008-04-05	remko
	* gmt_map.c, gmt_proj.c:	Fixed bug in azimuthal equal area projection that had the
				horizon shifted from where it ought to be.
	* *.txt:		Added more short explanations on input and output grid formats.
				In some man pages -F was explained instead of -f.
	* GMT_Chapter_4.tex, GMT_Appendix_B.tex:	Added information on -bic (netCDF tables).

2008-04-04	pwessel